--- a/HTML/My web page/style.css
+++ b/HTML/My web page/style.css
@@ -40,8 +40,7 @@ h3{
   .bottom-left {
     position: absolute;
     bottom: -70px;
-    left: 70
-    px;}
+    left: 70px;}
     
     .bottom-left h2{
       
