--- a/HTML/My web page/style.css
+++ b/HTML/My web page/style.css
@@ -91,3 +91,16 @@ h3{
       color: #8b8b8b;
       transition: all 0.5s ease-in-out;
     }
+    .button button{
+      background-color: #353535;
+      border: none;
+      font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+      font-size: 30px;
+    }
+    .button2 button{
+      font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+      font-size: 30px;
+      background-color: #353535;
+      border: none;
+    }
+    
