--- a/HTML/12.cas/style2.css
+++ b/HTML/12.cas/style2.css
@@ -1,47 +1,103 @@
+body {
+  font-family: "Ubuntu", sans-serif;
+  background-color: #ecf1e4;
+}
 * {
-    margin: 0;
-    box-sizing: border-box;
-  }
-  
-  header {
-    width: 100vw;
-    height: 20vh;
-    background-color: #d8bfd8;
-  }
-  
-  .img {
-    width: 10%;
-    height: 90%;
-  }
-  
-  .links {
-    display: inline-block;
-    margin-left: 40rem;
-  }
-  .links a{
-    font-size: 1.2rem;
-    text-decoration: none;
-    color: #0026ff;
-    padding-right: 0.7rem;
-    text-transform: uppercase;
-    /* margin-left: 5rem; */
-    cursor: pointer;
-  }
- 
-  .links a:hover{
-    padding: 0.5rem;
-    background-color: #7fffd4;
-    border-radius: 14px;
-      }
-      .links a:visited{
-        padding: 0.5rem;
-        background-color: #d9ff00;
-        border-radius: 14px;
-        color: #ff56f1;
-          }
-          .links a:active{
-            padding: 0.5rem;
-            background-color: #d9ff00;
-            border-radius: 14px;
-            color: #777777;
-              }
+  margin: 0;
+  box-sizing: border-box;
+}
+
+header {
+  width: 100vw;
+  height: 20vh;
+  background-color: #d8bfd8;
+}
+
+.img {
+  width: 10%;
+  height: 90%;
+}
+
+.links {
+  display: inline-block;
+  margin-left: 40rem;
+  margin-bottom: 3rem;
+}
+.links a {
+  font-size: 1.2rem;
+  text-decoration: none;
+  color: #0026ff;
+  padding-right: 0.7rem;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.links a:hover {
+  padding: 0.5rem;
+  background-color: #7fffd4;
+  border-radius: 14px;
+}
+.links a:visited {
+  padding: 0.5rem;
+  background-color: #d9ff00;
+  border-radius: 14px;
+  color: #ff56f1;
+}
+.links a:active {
+  padding: 0.5rem;
+  background-color: #d9ff00;
+  border-radius: 14px;
+  color: #777777;
+}
+.text h1 {
+  color: #3e5afc;
+  position: relative;
+  top: 7rem;
+  left: 18rem;
+  font-size: 60px;
+}
+
+
+.paragraf{
+position: relative;
+top: 8rem;  
+}
+.dugme{
+  background-color: #fcfcfc;
+  position: relative;
+  right: -50rem;
+  box-shadow: 0px 1px 7px;
+  width: 350px;
+  height: 323px;
+  border-radius: 10px;
+padding: 15px;
+}
+button:nth-of-type(2){
+  height: 40px;
+  width: 170px;
+  cursor: pointer;
+  position: relative;
+  right: -5rem;
+  background-color: #6aa746;
+  border-radius: 10px;
+  border:none ;
+  color:rgb(255, 255, 255);
+}
+button:nth-of-type(1){
+  height: 40px;
+  width: 320px;
+  cursor: pointer;
+  background-color: #3e5afc;
+  border-radius: 10px;
+  border:none ;
+  color:rgb(255, 255, 255);
+}
+ .dugme input{
+  width: 320px;
+  height: 40px;
+  border-radius: 7px;
+  border:solid thin rgb(112, 112, 112) ;
+}
+.dugme a{
+  padding-left: 85px;
+}
