--- a/HTML/12.cas/style2.css
+++ b/HTML/12.cas/style2.css
@@ -22,8 +22,8 @@ header {
   display: inline-block;
   margin-left: 40rem;
   margin-bottom: 3rem;
-  
 }
+
 .links a {
   font-size: 1.2rem;
   text-decoration: none;
@@ -58,15 +58,14 @@ header {
   font-size: 60px;
 }
 
-
-.paragraf{
-position: relative;
-top: 8rem;  
-width: 358px;
-left: 16rem;
-color: rgba(100, 100, 111, 0.8);
+.paragraf {
+  position: relative;
+  top: 8rem;
+  width: 350px;
+  left: 16rem;
+  color: rgba(100, 100, 111, 0.8);
 }
-.dugme{
+.dugme {
   background-color: #fcfcfc;
   position: relative;
   right: -50rem;
@@ -74,9 +73,9 @@ color: rgba(100, 100, 111, 0.8);
   width: 350px;
   height: 323px;
   border-radius: 10px;
-padding: 15px;
+  padding: 15px;
 }
-button:nth-of-type(2){
+button:nth-of-type(2) {
   height: 40px;
   width: 170px;
   cursor: pointer;
@@ -84,28 +83,129 @@ button:nth-of-type(2){
   right: -5rem;
   background-color: #6aa746;
   border-radius: 10px;
-  border:none ;
-  color:rgb(255, 255, 255);
+  border: none;
+  color: rgb(255, 255, 255);
 }
-button:nth-of-type(1){
+button:nth-of-type(1) {
   height: 40px;
   width: 320px;
   cursor: pointer;
   background-color: #3e5afc;
   border-radius: 10px;
-  border:none ;
-  color:rgb(255, 255, 255);
+  border: none;
+  color: rgb(255, 255, 255);
 }
- .dugme input{
+.dugme input {
   width: 320px;
   height: 40px;
   border-radius: 7px;
-  border:solid thin rgb(112, 112, 112) ;
+  border: solid thin rgb(112, 112, 112);
 }
-.dugme a{
+.dugme a {
   padding-left: 85px;
 }
-#novi{
+#novi {
   text-decoration: none;
   /* font-size: smaller; */
+}
+footer {
+  background-color: #e0e0e0;
+  position: relative;
+  bottom: 0;
+  width: 100vw;
+  display: flex;
+  /* width: 90vw; */
+}
+footer:hover .ball1 {
+  transform: translateX(1853px);
+}
+footer:hover .ball2 {
+  transform: translateX(-1853px);
+}
+.ball1 {
+  background-color: #8808ff;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation-name: lopta1;
+  animation-duration: 100s;
+  animation-fill-mode: forwards;
+
+  transition: transform 1s cubic-bezier(0.4, 0.01, 1, 1) 1s;
+}
+
+@keyframes lopta1 {
+  0% {
+    background-color: #ff0000;
+  }
+  15% {
+    background-color: #8808ff;
+  }
+  25% {
+    background-color: #9bffa9;
+  }
+  50% {
+    background-color: #b0b0ff;
+  }
+  75% {
+    background-color: #dc143c;
+  }
+  90% {
+    background-color: #f7ff8e;
+  }
+  100% {
+    background-color: #8808ff;
+  }
+}
+
+.ball2 {
+  background-color: #c1e5fd;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  flex-direction: row;
+  position: absolute;
+  right: 0;
+
+  animation-name: lopta2;
+  animation-duration: 100s;
+  animation-fill-mode: forwards;
+  transition: transform 1s cubic-bezier(0.4, 0.01, 1, 1) 1s;
+}
+@keyframes lopta2 {
+  0% {
+    background-color: #ff0000;
+  }
+  15% {
+    background-color: #8808ff;
+  }
+  25% {
+    background-color: #9bffa9;
+  }
+  50% {
+    background-color: #b0b0ff;
+  }
+  75% {
+    background-color: #dc143c;
+  }
+  90% {
+    background-color: #f7ff8e;
+  }
+  100% {
+    background-color: #8808ff;
+  }
+}
+
+@media all and (min-width: 501px) and (max-width: 700px) {
+  header {
+    background-color: #9bffa9;
+    width: 200px;
+    margin: auto;
+  }
+
+  .paragraf {
+    
+    width: 100px;
+    font-size: 10px;
+  }
 }
