--- a/JavaScript/56.cas/style.css
+++ b/JavaScript/56.cas/style.css
@@ -69,3 +69,9 @@ header input{
 #main button:hover{
     background-color: #aaaaaa;
 }
+.newDiv{
+    width: 50%;
+    height: 50px;
+    background-color: aquamarine;
+    
+}
