--- a/JavaScript/58.cas/style.css
+++ b/JavaScript/58.cas/style.css
@@ -5,7 +5,7 @@
   }
   
   body {
-    background-color: pink;
+    background-color: #2c2c2c;
     color: white;
     font-family: "Poppins", sans-serif;
     min-height: 100vh;
