--- a/JavaScript/56.cas/style.css
+++ b/JavaScript/56.cas/style.css
@@ -22,16 +22,13 @@ header input {
   border-radius: 10px;
 }
 .main ul {
-  width: 100px;
-  margin: 15px;
+  width: auto;
   list-style-type: none;
   margin-top: 1rem;
   border: solid 1px #aaaaaa;
   border-radius: 7px;
-}
-.main li {
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-left: 2rem;
+  overflow:auto;
 }
 .second {
     height: 200px;
@@ -43,10 +40,8 @@ header input {
   border-radius: 4px;
   /* color: #ffffff; */
   background-color: rgb(255, 0, 0);
-  border: none;
-  margin-top: 24px;
-}
-.main button:hover {
+  border: none;}
+.second button:hover {
   background-color: #e6a4a4;
 }
 #main button {
@@ -71,14 +66,9 @@ header input {
 #main button:hover {
   background-color: #aaaaaa;
 }
-.newDiv {
-  width: 50%;
-  height: 50px;
-  background-color: aquamarine;
-}
+
 .main {
     height: 290px;
   width: 400px;
-  background-color: #aaaaaa;
   display: inline-block;
 }
